--- a/main.html
+++ b/main.html
@@ -16,6 +16,7 @@
                <a href="main.html"> <img src="img/logo.png"> </a>
                <h3 class=""></h3>
             </div>
+            <h4 id='instruction'></h4>
          </div>
          <div class="mcqWrapper">
          	<div id="mcqWrapper">
